added tooltip kind off info for each neuron

--- a/index.html
+++ b/index.html
@@ -130,7 +130,18 @@ limitations under the License.
           
         </p>
         <p>
-          If you train a model from scratch you can also save it to browser local storage.
+          Change the hyperparameters as you would like them to be.
+        </p>
+        <p>
+          Add the number of neurons for the the number of layers you want to have in the required neural network.
+        </p>
+        <p>
+          Train the model.<br><br>A Model Summery Tab will appear you can maximise it or hide it.
+        </p>
+        <p>
+          You can visualize the architecture by clicking on the NN Structure button.<br><br>
+          If you want to visualize the coloured edges(coloured according to their weight sign),you can click on the 
+          checkbox and click on NN Structure again. 
         </p>
         <p>
           You can edit the properties in first row of "Test Examples" to generate
@@ -218,8 +229,8 @@ limitations under the License.
       <input type="checkbox" id="myCheck">
       </div>
       <div >
-      <canvas id="graph" width=1000 height=1000 ></canvas>
-      <canvas id="tip" width=200 height=100></canvas>
+      <canvas id="graph" width=0 height=0 ></canvas>
+      <canvas id="tip" width=200 height=80></canvas>
       </div>
       </section>
       <section>
