intensity of weights added

--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@ limitations under the License.
         <p>
           You can visualize the architecture by clicking on the NN Structure button.<br><br>
           If you want to visualize the coloured edges(coloured according to their weight sign),you can click on the 
-          checkbox and click on NN Structure again. 
+          checkbox and click on NN Structure again, the edges will appear coloured and varied in width and color 
+          intensity on the basis of the weight magnitude. 
         </p>
         <p>
           You can edit the properties in first row of "Test Examples" to generate
